--- a/views/home.ejs
+++ b/views/home.ejs
@@ -41,7 +41,7 @@
           movie.forEach(function (value, i) {
           value.addEventListener('click', ()=>{
               var x = ""+ (i+1);
-               location.assign('/'+x)
+               location.assign('/movie/'+x)
           })
          });
 
