--- a/views/seats.ejs
+++ b/views/seats.ejs
@@ -1,61 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
- 
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet">
-        <title>
-            <%= data[index].name %>
+
+<head>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet">
+    <title>
+        <%= data[movieIndex].name %>
+
+    </title>
+    <link rel="stylesheet" href="/Styles.css">
+</head>
+
+<body>
+
+
+    <div class="movie-page">
+        <div class="movie-page-header">
+
+            <div class="movie-title">
+                <%= data[movieIndex].name %>
+
+            </div>
+            <%= console.log(movieIndex,15) %>
+                <%= console.log(data[movieIndex].name) %>
+        </div>
+        <% let c=0%>
         
-        </title>
-        <link rel="stylesheet" href="/Styles.css">
-    </head>
-    <body>
+            <div class="seats-display">
+                <% data[movieIndex].seats.forEach((seat,index)=>{console.log(index) %>
+                    <div class="seat">
+                        <% if(seat==1){ %>
 
+                            <span style="height:20px;width:30px;padding:10px;cursor:pointer;">
+                                <img id='<%= index %>' onclick="myFunction('<%= index %>')" src="/assets/couch-solid copy.svg" />
+                            </span>
 
-        <div class="movie-page" >
-        <div class = "movie-page-header">
+                            <p  onclick="myFunction('<%= index %>')" >
+                                <%=index%>
+                            </p>
+                            <% }else if(seat==0){ %>
 
-        <div class="movie-title">
-            <%= data[index].name %>
+                                <span style="height:20px;width:30px;padding:10px;cursor:pointer;">
+                                    <img onclick="myFunction('<%= index %>')" src="/assets/couch-solid.svg" />
+                                </span>
+                                <p  onclick="myFunction('<%= index %>')" >
+                                    <%=index%>
+                                </p>
+                                <% } %>
+                                    <% c++ %>
+                    </div>
 
-        </div>
-            <%= console.log(index,15) %>
-          <%= console.log(data[index].name) %>
-        </div>
-        <% let c = 0%>
-        <div class="seats-display">
-        <% data[index].seats.forEach((seat)=>{ %>
-             <div class="seat">
-             <% if(seat==1){ %>
-              <span style="height:20px;width:30px;padding:10px">
-                 <img src="/assets/couch-solid copy.svg"/>
-                </span>
-                <p id="value<%=c%>" onclick="myFunction()" data-id="value<%=c%>"><%=c%></p>
-            <% }else if(seat==0){ %>
+                    <% }) %>
+            </div>
+            <div>
+                <form>
+                    <button type="submit" class="submit-button">SUBMIT</button>
+                </form>
+            </div>
 
-            <span style="height:20px;width:30px;padding:10px">
-               <img src="/assets/couch-solid.svg"/>
-              </span>
-              <p id="value<%=c%>" onclick="myFunction()" data-id="value<%=c%>"><%=c%></p>
-          <% } %>
-              <% c++ %>
-             </div>
-
-        <% }) %> 
-        </div>
     </div>
-        <%- include('../public/partials/footer') %>
-    </body>
-    <script>
-        let arr = []
-        function myFunction(){
-            var x = event.target.getAttribute("data-id")
-            const key = document.getElementById(x).innerHTML
-            arr.push(key);
-        }
+    <%- include('../public/partials/footer') %>
+</body>
+<script>
+    let arr = []
+    function myFunction(key) {
+
+        arr.push(key);
         console.log(arr)
-    </script>
-     
+    }
+
+    const form = document.querySelector('form')
+        form.addEventListener('submit',(e)=>{
+            e.preventDefault();
+            console.log(arr)
+            try {
+                const res =  fetch(`/book/${location.pathname.split('/')[2]}`,{
+                    method: 'POST',
+                    body: JSON.stringify(arr),
+                    headers: {'Content-Type':'application/json'}
+                });
+            
+            }
+            catch(err){
+                console.log(err)
+            }
+        })
+
+
+    console.log(arr)
+</script>
+
 </html>
