--- a/public/Styles.css
+++ b/public/Styles.css
@@ -1,8 +1,9 @@
 body{
-    background: rgb(221, 254, 255);
+    background-image: url("assets/1552.jpg");
     overflow: auto;
     font-family: 'Montserrat', sans-serif;
 }
+
 *{
     border:0;
     padding:0;
@@ -10,12 +11,11 @@ body{
 }
 .title{
     text-align: center;
-    font-size: 30px;
-    font-weight: 900;
-    color: rgb(8, 82, 124);
+    font-weight:900;
+    color: #DAA520;
 }
 .title:hover{
-    color: rgb(0, 47, 255);
+    color: #DAA520;
 }
 .card{
     padding-left: 12px;
@@ -27,9 +27,10 @@ body{
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     border-radius: 10px;
-    background-color: rgb(155, 213, 247);
+    background-color: #DAA520;
 }
 .card:hover {
+    cursor: pointer;
     box-shadow: 0 10px 20px 0 rgba(0,0,0,0.5);
   }
 .centre{
@@ -47,12 +48,13 @@ body{
     padding-right: 20px;
 }
 .footer{
+    color:white;
     position: absolute;
     bottom: 0;
     align-items: center;
 }
 .copyright{
-     
+    color:white;
     margin-left:45vw;
     text-align: center;color:rgb(46, 47, 49);
     font-weight: 900;
@@ -69,6 +71,9 @@ body{
 
 /* Movie Page */
 .movie-page{
+  
+   height: 100%;
+   width:100%;
    display:flex;
    flex-direction: column;
    align-items: center;
@@ -77,15 +82,20 @@ body{
 }
 
 .movie-page-header{
-
+  padding:20px;
+  width: fit-content;
+  background-color: #A0522D;
+  border-radius: 5px;
+  color: white;
   font-size:1.2rem;
-  font-weight: 800;
-  text-transform: capitalize;
+  font-weight: 900;
   margin: 100px;
+  border:10px solid black
 }
 
 .seats-display{
-     
+    background-color: #FAFAD2; 
+    border-radius: 10px;
     display:flex;
     align-items: center;
     flex-wrap: wrap;
@@ -107,7 +117,7 @@ body{
 
     height:50px;
     width:150px;
-
+    margin-top:20px;
 }
 
 .submit-button:hover{
