--- a/views/home.ejs
+++ b/views/home.ejs
@@ -9,7 +9,7 @@
     </head>
     <body>
         <div class = "header">
-            <p class = "title">Movie Booking System</p>
+            <h1 class = "title">Movie Booking System</h1>
         </div>
         <div class="wrapper">
             <div class="card"'>
