--- a/views/home.ejs
+++ b/views/home.ejs
@@ -12,27 +12,22 @@
             <h1 class = "title">Movie Booking System</h1>
         </div>
         <div class="wrapper">
+           <%for(let i=0;i<data.length;i++){  %>
+             
             <div class="card"'>
-                <h2>Movie 1</h2>
-                <h4>Info 1</h4>
-                <img src = "/assets/image.jpeg" alt="Movie" class="centre">
+              <div class="card-title">
+                <h2><%= data[i].name %></h2>
               </div>
-              <div class="card">
-                <h2>Movie 2</h2>
-                <h4>Info 2</h4>
-                <img src = "/assets/image.jpeg" alt="Movie" class="centre">
+              <div class="card-description">
+                <h4><%= data[i].description %></h4>
               </div>
-              <div class="card">
-                <h2>Movie 3</h2>
-                <h4>Info 3</h4>
-                <img src = "/assets/image.jpeg" alt="Movie" class="centre">
+                <img src = <%= data[i].url %> alt="Movie" class="centre"/>
               </div>
-              <div class="card">
-                <h2>Movie 4</h2>
-                <h4>Info 4</h4>
-                <img src = "/assets/image.jpeg" alt="Movie" class="centre">
-              </div>
+             
+
+           <% } %>
         </div>
+        
         <%- include('../public/partials/footer') %>
     </body>
 
